[tool.poetry]
name = "decode-fms"
version = "0.1.0"
description = ""
authors = ["Fabian Allendorf <fabian.allendorf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
typer = "^0.4.0"
tqdm = "^4.62.3"
Faker = "^9.8.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
